web/book/tests/documentation/snapshots/documentation__book__reference__syntax__keywords__identifiers--keywords__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from invoices\nderive t = time\n"
snapshot_kind: text
---
Error:
   ╭─[:2:12]
   │
 2 │ derive t = time
   │            ──┬─
   │              ╰─── expected a value, but found a type
───╯
